<resources>
    <string name="app_name">GroceryApp</string>
    <string name="loging">Log In</string>
    <string name="enter_your_emails_and_password">Enter your emails and password</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="welcome_to_our_store">Welcome to our store</string>
    <string name="get_your_groceries_in_as_fast_as_one_hour">Get your groceries in as fast as one hour!</string>
    <string name="get_started">Get Started</string>
    <string name="phone_no">Phone No.</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="hello">"Hello, "</string>
    <string name="see_all">See all</string>
    <string name="pay">Pay</string>
    <string name="view_cart">View Cart</string>
    <string name="total_0_00">Total: 0.00</string>
    <string name="my_cart">My Cart</string>
    <string name="remove_item">Remove Item</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>
    <string name="email_id">Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="your_items_have_been_placed_and_are_on_their_way_to_being_processed">Your items have been placed and are on their way to being processed</string>
</resources>