<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_image"
    android:padding="24dp">

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_our_store"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_your_groceries_in_as_fast_as_one_hour"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <!-- Get Started Button -->
    <Button
        android:id="@+id/get_started_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:paddingTop="50sp"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
